tests/invalid/multi_assignment/main.py
def run_case() -> None:
    a: int = 1
    b: int = 2
    a, b = 3


if __name__ == "__main__":
    run_case()
